Fixes the displayed title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Released under the MIT license: http://jsbin.mit-license.org
 <html> 
  <head>
     <meta name="description" content="A game where the character runs from the mouse"/>
-    <title>The Mouse of Terror</title> 
+    <title>Chase the Mouse</title> 
     <style>
       * {
         margin: 0;
